[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Art/PNG/ufoYellow.png" type="Texture" id=2]
[ext_resource path="res://Scenes/PathCollection.tscn" type="PackedScene" id=3]
[ext_resource path="res://Art/Audio/enemy_laser.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 27.458

[sub_resource type="Animation" id=2]
resource_name = "hit"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.87451, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 0.87451, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.890196, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.890196, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="Enemy" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.87051
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Anim" type="AnimationPlayer" parent="."]
autoplay = "rotation"
playback_speed = 0.6
anims/hit = SubResource( 2 )
anims/rotation = SubResource( 3 )

[node name="PathCollection" parent="." instance=ExtResource( 3 )]

[node name="BulletContainer" type="Node" parent="."]

[node name="FireRateTimer" type="Timer" parent="."]

[node name="Shoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="timeout" from="FireRateTimer" to="." method="_on_FireRateTimer_timeout"]
